[package]
name = "ntlm-info"
version = "0.1.0"
description = "Retrieve host information from NTLM"
authors = ["Eloy Pérez <zer1t0ps@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/Zer1t0/ntlm-info"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log = "0.4"
stderrlog = "0.5"
url = "2.2"
ipnet = "2.3"
trust-dns-resolver = "0.20"
reqwest = { version = "0.11", features = ["blocking"] }
base64 = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
threadpool = "1.8"

smb = { version = "0.0.1", package = "red_smb" }
spnego = { version = "0.0.1", package = "red_spnego" }
ntlm = { version = "0.0.1", package = "red_ntlm"}
